This commit includes code for resolving data between a spreadsheet and the repository. Also added some exception handling.
Also fixed some swagger problems after the Spring Boot upgrade.